Added mini timetables in webpage

--- a/src/Webpage/index.html
+++ b/src/Webpage/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="courses.controller.js"></script>
     <script type="text/javascript" src="timetables.controller.js"></script>
-    <script type="text/javascript" src="generator.service.js"></script>
+    <script type="text/javascript" src="uoftTimetable.directive.js"></script>
+    <script type="text/javascript" src="generator.service.js"> </script>
 </body>
 </html>
