--- a/src/Webpage/timetables.html
+++ b/src/Webpage/timetables.html
@@ -1,7 +1,9 @@
 ﻿<div>
 	<header>Timetables</header>
 	<div>
-		<div ng-repeat="timetable in timetables">{{timetable}}</div>
-		{{wasd.length}}
+        <div ng-repeat="timetable in timetables track by $index">
+            <uofttimetable blocks="timetable.fallTimetableBlocks" displayInfo="false" chartTitle="Fall"></uofttimetable>
+            <uofttimetable blocks="timetable.winterTimetableBlocks" displayInfo="false" chartTitle="Winter"></uofttimetable>
+        </div>        
 	</div>
 </div>
