Added improvements to the timetables page
Added gridlines to the mini timetables
Added better formatting of the timetable titles
Added a color scheme to the timetable blocks
Changed the timetable directive to timetable-preview.

--- a/src/Webpage/timetables.html
+++ b/src/Webpage/timetables.html
@@ -2,8 +2,8 @@
 	<header>Timetables</header>
 	<div>
         <div ng-repeat="timetable in timetables track by $index">
-            <uofttimetable blocks="timetable.fallTimetableBlocks" displayInfo="false" chartTitle="Fall"></uofttimetable>
-            <uofttimetable blocks="timetable.winterTimetableBlocks" displayInfo="false" chartTitle="Winter"></uofttimetable>
+            <timetable-preview blocks="timetable.fallTimetableBlocks" colorScheme="sectionColors" chartTitle="Fall"></timetable-preview>
+            <timetable-preview blocks="timetable.winterTimetableBlocks" colorScheme="sectionColors" chartTitle="Winter"></timetable-preview>
         </div>        
 	</div>
 </div>
