Made changes to the timetable and timetable-preview directives where they are made to be data-driven: it creates objects which then is used to create UI elements. It uses a lot of ng-repeat, etc.
Very good!!!!
Use this as a template for any future creation of directives!

--- a/src/Webpage/index.html
+++ b/src/Webpage/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="app/controllers/timetables.controller.js"></script>
     <script type="text/javascript" src="app/directives/timetable-preview.directive.js"></script>
     <script type="text/javascript" src="app/directives/timetable.directive.js"></script>
+    <!-- <script type="text/javascript" src="app/directives/schedule.directive.js"></script>  -->
     <script type="text/javascript" src="app/services/generator.service.js"> </script>
 </body>
 </html>
