Added UI to the preferences panel
Has added an awesome UI component for the preferences panel!

Will be converting the Restrictions panel parts into an Anglular component

--- a/src/Webpage/index.html
+++ b/src/Webpage/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Uoft Timetable Generator</title>
+    <link rel="stylesheet" href="app/styles/preferences-panel.css"/>
     <link rel="stylesheet" ng-href="{{css}}">
 </head>
 <body>
@@ -20,7 +21,7 @@
     <script type="text/javascript" src="app/controllers/timetables.controller.js"></script>
     <script type="text/javascript" src="app/directives/timetable-preview.directive.js"></script>
     <script type="text/javascript" src="app/directives/timetable.directive.js"></script>
-    <!-- <script type="text/javascript" src="app/directives/schedule.directive.js"></script>  -->
+    <script type="text/javascript" src="app/components/preferences-panel.component.js"></script>
     <script type="text/javascript" src="app/services/generator.service.js"> </script>
 </body>
 </html>
