Styled the range input
What to work on:
When the user clicks on the Preferences or Restrictions panel, make the Preferences / Restrictions panel be displayed in the overlay panel.

Also what to work on:
Put the CourseListSelection into its own component, and reuse it as many as one likes.

--- a/src/Webpage/index.html
+++ b/src/Webpage/index.html
@@ -10,6 +10,7 @@
 
     <!-- Load the stylesheets that are used in per page -->
     <link rel="stylesheet" ng-href="{{css}}">
+    <link rel="stylesheet" href="app/styles/common.css"/>
 </head>
 <body>
 	<div ng-view></div>
