--- a/src/Webpage/index.html
+++ b/src/Webpage/index.html
@@ -7,6 +7,7 @@
     <!-- Load the components' style sheets -->
     <link rel="stylesheet" href="app/styles/preferences-panel.css"/>
     <link rel="stylesheet" href="app/styles/restrictions-panel.css"/>
+    <link rel="stylesheet" href="app/styles/timetable-viewer.css"/>
 
     <!-- Load the stylesheets that are used in per page -->
     <link rel="stylesheet" ng-href="{{css}}">
@@ -33,6 +34,7 @@
     <!-- Load the components -->
     <script type="text/javascript" src="app/components/preferences-panel.component.js"></script>
     <script type="text/javascript" src="app/components/restrictions-panel.component.js"></script>
+    <script type="text/javascript" src="app/components/timetable-viewer.component.js"></script>
 
     <!-- Load the services -->
     <script type="text/javascript" src="app/services/generator.service.js"> </script>
