Componentized the Course Selection homepage
What was worked on:
Made new components to componentize the Course selection homepage.

What to work on:
The course search bar and how there can be better show/hide of the menu box

What to work on:
Enable use of the preferneces / restrictions in the backend

--- a/src/Webpage/index.html
+++ b/src/Webpage/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="app/styles/preferences-panel.css"/>
     <link rel="stylesheet" href="app/styles/restrictions-panel.css"/>
     <link rel="stylesheet" href="app/styles/timetable-viewer.css"/>
+    <link rel="stylesheet" href="app/styles/selected-course-list.component.css"/>
+    <link rel="stylesheet" href="app/styles/course-search-bar.component.css"/>
 
     <!-- Load the stylesheets that are used in per page -->
     <link rel="stylesheet" ng-href="{{css}}">
@@ -35,8 +37,11 @@
     <script type="text/javascript" src="app/components/preferences-panel.component.js"></script>
     <script type="text/javascript" src="app/components/restrictions-panel.component.js"></script>
     <script type="text/javascript" src="app/components/timetable-viewer.component.js"></script>
+    <script type="text/javascript" src="app/components/course-search-bar.component.js"></script>
+    <script type="text/javascript" src="app/components/selected-course-list.component.js"></script>
 
     <!-- Load the services -->
-    <script type="text/javascript" src="app/services/generator.service.js"> </script>
+    <script type="text/javascript" src="app/services/timetable-generator.service.js"> </script>
+    <script type="text/javascript" src="app/services/course-search.services.js"></script>
 </body>
 </html>
