--- a/src/Webpage/app/courses page/courses.html
+++ b/src/Webpage/app/courses page/courses.html
@@ -8,7 +8,7 @@
 	<!-- The search box -->
 	<div id="searchArea">
         <h4>Get your own personal timetable.</h4>
-        <course-search-bar on-select-course="selectCourse(course)">
+        <course-search-bar on-select-course="selectCourse(course)" selected-courses="selectedCourses">
         </course-search-bar>
 	</div>
 
